--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,27 @@
 <h1>Create a new Pet</h1>
+<form class="" action="/pets" method="post">
+  <label for="pet[name]">Name:</label>
 
+  <br>
+
+  <input type="text" name="pet[name]" id="pet_name" value="">
+
+  <label>Choose an existing owner:</label>
+
+  <br>
+
+  <%Owner.all.each do |owner|%>
+    <input type="checkbox" name="pet[owner_id]" id="<%=owner.id%>" value="<%=owner.id%>"><%=owner.name%></input>
+  <%end%>
+
+  <br>
+
+  <label>and/or create a new owner:</label>
+  <br>
+  <label>Name:</label>
+  <br>
+  <input type="text" name="owner[name]" id="owner_name" value="">
+  <br>
+  <input type="submit" value="Create Pet">
+
+</form>
