Automatically backed up by Learn

--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,4 +1,4 @@
 <h1>Update Pet</h1>
-<form class="" action="/pets/<%=@pets.id%>" method="post">
+<form action="/pets/<%=@pets.id%>" method="post">
 
 </form>
