--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,4 +1,7 @@
 <h1>Update Pet</h1>
 <form action="/pets/<%=@pets.id%>" method="post">
+  <input type="hidden" id="hidden" name="_method" value="patch">
+
+  <input type="text" name="pet_name" value="">
 
 </form>
