--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -2,6 +2,6 @@
 <form action="/pets/<%=@pets.id%>" method="post">
   <input type="hidden" id="hidden" name="_method" value="patch">
 
-  <input type="text" name="pet_name" value="">
+  <input type="text" name="pet_name" value="<%=@pet.name%>">
 
 </form>
