--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,7 +1,18 @@
 <h1>Update Pet</h1>
 <form action="/pets/<%=@pet.id%>" method="post">
   <input type="hidden" id="hidden" name="_method" value="patch">
+  <label>Name:</label>
+
+  <br>
 
   <input type="text" name="pet_name" value="<%=@pet.name%>">
+
+  <br>
+
+  <label>Choose an existing owner:</label>
+
+  <%@owners.each do |owner| %>
+    <input type="checkbox" name="owner[id]" id="<%=owner.id%>" value="<%=owner.id%>" <%= 'checked' if @pet.owner == owner %>><%= owner.name%></input>
+    <%end%>
 
 </form>
