--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -15,4 +15,9 @@
     <input type="checkbox" name="owner[id]" id="<%=owner.id%>" value="<%=owner.id%>" <%= 'checked' if @pet.owner == owner %>><%= owner.name%></input>
     <%end%>
 
+    <label>and/or create new owner:</label>
+    <br>
+    <label>Name:</label>
+    <input type="text" name="owner[name]" id="owner_name" value="">
+
 </form>
