Automatically backed up by Learn

--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -19,5 +19,7 @@
     <br>
     <label>Name:</label>
     <input type="text" name="owner[name]" id="owner_name" value="">
+    <br>
+    <input type="submit" name="submit" value="Update Pet">
 
 </form>
