--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,11 +1,11 @@
 <h1>Update Pet</h1>
 <form action="/pets/<%=@pet.id%>" method="post">
-  
+
   <label>Name:</label>
 
   <br>
 
-  <input type="text" name="pet_name" value="<%=@pet.name%>">
+  <input type="text" name="pet[name]" id="pet_name" value="<%=@pet.name%>">
 
   <br>
 
